Fixed spacing in leaflet popups

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ body {
 .popup-stats {
 	font-size: 12px;
 	color: #444;
+    padding-right: 30px;
 }
 
 .modal {
